fix(cis): add missing add-opens JVM declarations